# leon

./: .env.sample  .gitignore  .lintstagedrc  README.md  config.sample.yml  eslint.config.mjs  jsconfig.json  nodemon.json  nodemon.nolint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  qwen3-4b-leon  qwen3-4b-skillrouter  tsconfig.json  vitest.agentic-loop.config.ts  vitest.config.ts
bridges/python/src/: constants.py  main.py  params_helper.py  pyproject.toml  setup.py
bridges/python/src/sdk/: base_tool.py  leon.py  memory.py  network.py  platform_utils.py  settings.py  tool_manager.py  toolkit_config.py  types.py  utils.py  widget.py
bridges/python/src/sdk/tools/: assemblyai_audio_tool.py  cerebras_tool.py  chatterbox_onnx_tool.py  elevenlabs_audio_tool.py  faster_whisper_tool.py  ffmpeg_tool.py  ffprobe_tool.py  grok_tool.py  openai_audio_tool.py  opencode_tool.py  openrouter_tool.py  qwen3_asr_tool.py  qwen3_tts_tool.py  ultimate_vocal_remover_onnx_tool.py  ytdlp_tool.py
bridges/python/src/sdk/tools/assemblyai_audio/: __init__.py  assemblyai_audio_tool.py
bridges/python/src/sdk/tools/bash/: bash_tool.py
bridges/python/src/sdk/tools/cerebras/: __init__.py  cerebras_tool.py
bridges/python/src/sdk/tools/chatterbox_onnx/: __init__.py  chatterbox_onnx_tool.py
bridges/python/src/sdk/tools/coding_development/: toolkit.json
bridges/python/src/sdk/tools/ecapa/: __init__.py  (+1 more)
tcp_server/src/: Pipfile  main.py  pyproject.toml  setup.py
tcp_server/src/lib/: audio_input.py  constants.py  nlp.py  tcp_server.py
tcp_server/src/lib/asr/: api.py
(+1073 files in other folders)
