[project]
name = "leon-tcp-server"
# Keep this metadata version for uv project compatibility only.
# Leon runtime versioning still comes from `version.py`.
version = "1.0.0"
requires-python = "==3.11.9"
dependencies = [
  "python-dotenv==0.19.2",
  "transformers==4.27.4",
  "g2p-en==2.1.0",
  "gruut[de,es,fr]==2.2.3",
  "inflect==7.0.0",
  "tqdm==4.66.4",
  "soundfile==0.12.1",
  "numba==0.59.1",
  "faster-whisper==1.1.1",
  "numpy==1.26.4",
  "openwakeword==0.6.0",
  "soundcard==0.4.5",
]

[tool.uv]
package = false
