[project]
name = "leon-python-bridge"
# Keep this metadata version for uv project compatibility only.
# Leon runtime versioning still comes from `version.py`.
version = "1.0.0"
requires-python = "==3.11.9"
dependencies = [
  "requests==2.32.3",
  "beautifulsoup4==4.7.1",
  "pypdl==1.5.6",
]

[tool.uv]
package = false
